--- a/playbooks/mount-volumes.yaml
+++ b/playbooks/mount-volumes.yaml
@@ -26,17 +26,23 @@
         opts: "defaults,nodev,nosuid,noexec"
 
   tasks:
+    - name: Check if device is already partitioned
+      command: "lsblk -n -o NAME {{ item.device | basename }}1"
+      register: check_partition
+      failed_when: false
+      changed_when: false
+      with_items: "{{ volumes }}"
+      when: item.filesystem != "tmpfs"
+
     - name: Partition the volume if not already partitioned
       shell: |
         echo -e 'o\nn\np\n1\n\n\nw' | fdisk {{ item.device }}
-        lsblk -o NAME,TYPE | grep -q "{{ item.device | basename }}1"
       args:
-        warn: false
         executable: /bin/bash
-      when: item.filesystem != "tmpfs"
+      when: item.filesystem != "tmpfs" and "1" not in check_partition.results[item.index].stdout
       with_items: "{{ volumes }}"
-      register: partition_result
-      changed_when: "'already contains a partition table' not in partition_result.stderr and 'created new partition' in partition_result.stdout"
+      loop_control:
+        index_var: index
 
     - name: Format the volume if not already formatted
       filesystem:
