--- a/playbooks/mount-volumes.yaml
+++ b/playbooks/mount-volumes.yaml
@@ -5,22 +5,26 @@
   vars:
     volumes:
       - device: "/dev/vdb"
+        mount_point: "/home"
+        filesystem: "tmpfs"
+        opts: "ext4"
+      - device: "/dev/vdc"
         mount_point: "/var"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vdc"
+      - device: "/dev/vdd"
         mount_point: "/var/log"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vdd"
+      - device: "/dev/vde"
         mount_point: "/var/log/audit"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vde"
+      - device: "/dev/vdf"
         mount_point: "/var/tmp"
         filesystem: "ext4"
         opts: "defaults,nodev,nosuid,noexec"
-      - device: "/dev/vdf"
+      - device: "/dev/vdg"
         mount_point: "/dev/shm"
         filesystem: "tmpfs"
         opts: "defaults,nodev,nosuid,noexec"
