--- a/playbooks/mount-volumes.yaml
+++ b/playbooks/mount-volumes.yaml
@@ -1,13 +1,13 @@
 ---
-- name: Partition, format, and mount disks starting from vdd
+- name: Force mount volumes to specified mount points
   hosts: all
   become: yes
   vars:
     volumes:
       - device: "/dev/vdb"
         mount_point: "/home"
-        filesystem: "tmpfs"
-        opts: "ext4"
+        filesystem: "ext4"
+        opts: "defaults,nodev"
       - device: "/dev/vdc"
         mount_point: "/var"
         filesystem: "ext4"
@@ -30,32 +30,7 @@
         opts: "defaults,nodev,nosuid,noexec"
 
   tasks:
-    - name: Check if devices are already partitioned
-      command: "lsblk -n -o NAME {{ item.device | basename }}1"
-      register: partition_check
-      failed_when: false
-      changed_when: false
-      with_items: "{{ volumes }}"
-      when: item.filesystem != "tmpfs"
-
-    - name: Partition the volumes if not already partitioned
-      shell: |
-        echo -e 'o\nn\np\n1\n\n\nw' | fdisk {{ item.device }}
-      args:
-        executable: /bin/bash
-      when: 
-        - item.filesystem != "tmpfs"
-        - "'1' not in (partition_check.results | selectattr('item', 'equalto', item) | map(attribute='stdout') | list | first | default(''))"
-      with_items: "{{ volumes }}"
-
-    - name: Format the volume if not already formatted
-      filesystem:
-        dev: "{{ item.device }}1"
-        fstype: "{{ item.filesystem }}"
-      when: item.filesystem != "tmpfs"
-      with_items: "{{ volumes }}"
-
-    - name: Create mount point directory
+    - name: Ensure the mount point directory exists
       file:
         path: "{{ item.mount_point }}"
         state: directory
@@ -64,20 +39,11 @@
         mode: "0755"
       with_items: "{{ volumes }}"
 
-    - name: Mount the volume
+    - name: Mount the volume (force overwrite existing mount point)
       mount:
         path: "{{ item.mount_point }}"
         src: "{{ item.device }}1"
         fstype: "{{ item.filesystem }}"
         opts: "{{ item.opts }}"
         state: mounted
-      when: item.filesystem != "tmpfs"
-      with_items: "{{ volumes }}"
-
-    - name: Persist the mount in /etc/fstab
-      blockinfile:
-        path: /etc/fstab
-        block: |
-          {{ item.device }}1 {{ item.mount_point }} {{ item.filesystem }} {{ item.opts }} 0 2
-      when: item.filesystem != "tmpfs"
       with_items: "{{ volumes }}"
