--- a/playbooks/mount-volumes.yaml
+++ b/playbooks/mount-volumes.yaml
@@ -13,18 +13,22 @@
         filesystem: "ext4"
         opts: "defaults"
       - device: "/dev/vdd"
-        mount_point: "/var/log"
+        mount_point: "/tmp"
         filesystem: "ext4"
         opts: "defaults"
       - device: "/dev/vde"
-        mount_point: "/var/log/audit"
+        mount_point: "/var/log"
         filesystem: "ext4"
         opts: "defaults"
       - device: "/dev/vdf"
+        mount_point: "/var/log/audit"
+        filesystem: "ext4"
+        opts: "defaults"
+      - device: "/dev/vdg"
         mount_point: "/var/tmp"
         filesystem: "ext4"
         opts: "defaults,nodev,nosuid,noexec"
-      - device: "/dev/vdg"
+      - device: "/dev/vdh"
         mount_point: "/dev/shm"
         filesystem: "tmpfs"
         opts: "defaults,nodev,nosuid,noexec"
