--- a/playbooks/mount-volumes.yaml
+++ b/playbooks/mount-volumes.yaml
@@ -4,31 +4,31 @@
   become: yes
   vars:
     volumes:
-      - device: "/dev/vdb"
+      - device: "/dev/vdd"
         mount_point: "/home"
         filesystem: "ext4"
         opts: "defaults,nodev"
-      - device: "/dev/vdc"
+      - device: "/dev/vde"
         mount_point: "/var"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vdd"
+      - device: "/dev/vdf"
         mount_point: "/tmp"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vde"
+      - device: "/dev/vdg"
         mount_point: "/var/log"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vdf"
+      - device: "/dev/vdh"
         mount_point: "/var/log/audit"
         filesystem: "ext4"
         opts: "defaults"
-      - device: "/dev/vdg"
+      - device: "/dev/vdi"
         mount_point: "/var/tmp"
         filesystem: "ext4"
         opts: "defaults,nodev,nosuid,noexec"
-      - device: "/dev/vdh"
+      - device: "/dev/vdj"
         mount_point: "/dev/shm"
         filesystem: "tmpfs"
         opts: "defaults,nodev,nosuid,noexec"
