--- a/playbooks/playbook.yaml
+++ b/playbooks/playbook.yaml
@@ -1,5 +1,5 @@
 ---
-# - import_playbook: mount-volumes.yaml
+- import_playbook: mount-volumes.yaml
 - import_playbook: init.yaml
 - import_playbook: remediate.yaml
 # - import_playbook: remediate-scap.yaml
