--- a/playbooks/init.yaml
+++ b/playbooks/init.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Update system, install OSCAP, generate and run CIS Level 2 remediation script
   hosts: all
-  become: yes
+  become: true
   tasks:
     - name: Update all packages to the latest version
       ansible.builtin.dnf:
